stuff/_server-list.scss
:root {
  --button-count: 3;
  //height*count + bottom padding
  --buttons-height: calc((34.5px * var(--button-count)) + 10px);

  &:has(.container__37e49 .flex__7c0ba > button:nth-child(4)) {
    --button-count: 4;
  }

  // Server list
  .guilds_c48ade .scroller_ef3116 {
    contain: none !important;
    height: calc(100vh - var(--buttons-height));
    padding-bottom: 40px;
  }

  // Folder
  .expandedFolderBackground__48112 {
    border-radius: var(--server-radius);
  }
  .folder__48112 {
    background-color: transparent;
  }

  // Discover
  .discoverHeader_b992d4 ~ .categoryItem_c72b37 {
    margin-left: 0;

    .itemInner_c72b37 {
      padding: 8px;
      border-radius: 0;
    }
  }

  .footer__214dc {
    display: none; // hides discover button
  }

  .pageWrapper_a3a4ce {
    background-color: var(--background-primary);

    .scroller-3j5xK2 {
      padding: 0 !important;
    }

    .headerImage-2D5D-v {
      position: relative;
      top: -8px;
      border-radius: 0;
      -webkit-mask: linear-gradient(black, transparent);
    }

    .guildListSection_c8c448 {
      padding: 0 32px 32px;
      box-sizing: border-box;
    }
  }

  .scroller_a39aa3 {
    padding: 0 !important;

    .headerImage_a39aa3 {
      position: relative;
      top: -8px;
      border-radius: 0;
      -webkit-mask: linear-gradient(black, transparent);
    }

    .guildListSection_ac51fa,
    .footerDescription_a39aa3 {
      padding: 0 32px 32px;
      box-sizing: border-box;
    }
  }

  .css-bcsufo-menu {
    background: var(--background-secondary-alt);
  }

  .css-1a1o7fb-control,
  .css-2dw5y-control,
  .css-p0ralp-control {
    background: var(--background-secondary);
  }

  // Student Hubs
  .itemInner__2abad {
    padding: 8px;
    margin-left: 0;
  }

  .header_a7218d {
    margin: -32px -32px 0 -32px;
    border-radius: 0;

    .headerImage_a7218d {
      border-radius: 0;
      -webkit-mask: linear-gradient(black, transparent);
    }
  }

  // Create a server modal
  .theme-light {
    .root__49fc1,
    .footer__49fc1 {
      box-shadow: none;
    }
    .contents__201d5 {
      color: #fff;
    }

    .templatesList_c04f35,
    .optionsList__78f69 {
      padding: 0 !important;
      border-radius: 0;

      .container_eb2cd2 {
        border: none;
        border-radius: 0;
      }

      .optionHeader_c04f35 {
        text-align: center;
        margin: 12px 0;
      }
    }
    .createGuild_b917ac {
      padding: 10px !important;
    }
  }

  // User buttons
  .panels_c48ade {
    z-index: 2;

    & > .container__37e49 {
      container-type: unset;
      height: 0;

      & .buttons__37e49 {
        position: fixed;
        bottom: 0;
        left: 0;
        width: 72px;
        padding: 20px 0 10px 0;
        flex-direction: column;
        background: linear-gradient(
          transparent,
          var(--background-tertiary) 15%
        );

        & .button__67645 {
          color: var(--user-buttons-color);
          margin: var(--user-buttons-spacing) auto 0 auto;
          width: 100%;

          &[aria-checked="false"] .lottieIcon__5eb9b,
          &:not([role="switch"]) .lottieIcon__5eb9b // settings icon
          {
            --__lottieIconColor: var(--user-buttons-color) !important;
          }
        }
      }
    }
  }

  // Notifications settings
  .inner-1ilYF7 > .modal__7f8f5 > .header__49fc1,
  .modal__7f8f5,
  .inner-1ilYF7 > .modal__7f8f5 > .scrollerBase__99f8c {
    background: var(--background-secondary);
  }

  // Mention gradient
  .unreadMentionsBar_ef3116 .text__3b95d {
    display: none;
  }

  // Top
  .unreadMentionsIndicatorTop_ef3116 {
    width: 100%;
    height: 50px;
    top: -7px;
    padding: 0;

    .unreadMentionsBar_ef3116 {
      border-radius: 0;
      background: linear-gradient(var(--mention-color), #0000);
      transition: 100ms;

      &:active {
        background: linear-gradient(var(--mention-color), #0000);
      }
    }
  }

  // Bottom
  .unreadMentionsIndicatorBottom_ef3116 {
    width: 100%;
    height: 15px;
    padding: 0;

    bottom: var(--buttons-height);

    .unreadMentionsBar_ef3116 {
      border-radius: 0;
      background: linear-gradient(#0000, var(--mention-color));

      &:active {
        background: linear-gradient(#0000, var(--mention-color));
      }
    }
  }

  // Mention pill
  .lowerBadge_cc5dd2 {
    top: 0;
    left: 0;

    .numberBadge__2b1f5 {
      background-color: var(--mention-color) !important;

      &::before {
        content: "";
        position: absolute;
        width: 16px;
        height: 16px;
        background-color: inherit;
        border-radius: 100%;
        z-index: -1;
        // prettier-ignore
        animation: var(--disable-animations), 2s pulse infinite;
        will-change: transform;
      }
    }
  }
}

@keyframes pulse {
  0% {
    transform: scale(1);
    opacity: 1;
  }

  100% {
    transform: scale(1.75);
    opacity: 0;
  }
}

